
@startuml Avatar

interface CreationListMotClef{
    MatchMotClef(Mots : List[String], BDListLieux, BDPolitesse): (String,List[(String, String)])
}

interface AnalysePhrase{
    SepMots(s:String): List[String]
}
interface CreationDeRep{
    Reponse(message: String): String
}
interface Correction{
    Correct(Mots : List[String], BDListLieux, BDPolitesse): List[String]
}

interface Interface{
    ask(s: String): List[String]
    
}

Interface <-> CreationDeRep
AnalysePhrase --> CreationDeRep
Correction --|> CreationListMotClef




class BDListLieux <<(B,Orange)>>
class BDPolitesse <<(B,Orange)>>
CreationListMotClef --> CreationDeRep
BDListLieux --|> CreationListMotClef
BDPolitesse --|> CreationListMotClef

EntréUtilisateur --|> Interface

@enduml